// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing on MultipleCustomHooks  should display as snapshot 1`] = `
<Fragment>
  <div
    className="row"
  >
    <div
      className="col pt-5 px-5"
    >
      <h1>
        MultiHooks
      </h1>
      <hr />
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col p-5"
    >
      <div
        className="alert alert-info text-center"
      >
        <div
          className="spinner-border"
        >
          <span
            className="visually-hidden"
          >
            Loading...
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col p-5"
    >
      <button
        className="btn btn-primary"
        onClick={[Function]}
      >
        Siguiente -&gt;
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`testing on MultipleCustomHooks  should display info as intended 1`] = `
<Fragment>
  <div
    className="row"
  >
    <div
      className="col pt-5 px-5"
    >
      <h1>
        MultiHooks
      </h1>
      <hr />
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col p-5"
    >
      <div
        className="alert alert-info text-center"
      >
        <figure>
          <blockquote
            className="blockquote"
          >
            <p>
              quote
            </p>
          </blockquote>
          <figcaption
            className="blockquote-footer"
          >
            author
             in 
            <cite
              title="Source Title"
            >
              series
            </cite>
          </figcaption>
        </figure>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col p-5"
    >
      <button
        className="btn btn-primary"
        onClick={[Function]}
      >
        Siguiente -&gt;
      </button>
    </div>
  </div>
</Fragment>
`;
